# CrewAi_Project

crewAi_2025/: Ollama_report.md  README.md  hello.py  pyproject.toml  report.md
crewAi_2025/step_01_simple_crew/: crew.py
crewAi_2025/step_02_crew_using_yaml_config/: main.py
crewAi_2025/step_02_crew_using_yaml_config/config/: tasks.yaml
crewAi_2025/step_03_agents_with_tools/: crew.py
crewAi_2025/step_03_agents_with_tools/output/: report.md
crewAi_2025/step_04_flows/: basic_flow.py
crewAi_2025/step_05_states/: structured_state.py  unstructured_state.py
crewAi_2025/step_06_conditional_flows/: conditional_and_flow.py  conditional_or_flow.py  conditional_router_flow.py
crewAi_2025/test/: crew.py
crewai/project1/: crewai_flow.html  poem.txt  pyproject.toml
crewai/project1/src/project1/: and_module.py  or_module.py  router.py
uv_work/explore-uv/: pyproject.toml
uv_work/explore-uv/src/explore_uv/: decorator.py  hello.py
